pantalla de inicio

--- a/HealthLife/src/index.html
+++ b/HealthLife/src/index.html
@@ -5,7 +5,15 @@
   <title>HealthLife</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icono/icono.png">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/ef9530aaf5.js"></script>
+  <!--<link href="../src/assets/JS/bootstrap-icons.css" rel="stylesheet">
+  <link href="../src/assets/JS/boxicons.min.css" rel="stylesheet">
+  <link href="../src/assets/JS/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../src/assets/JS/bootstrap.min.css" rel="stylesheet">
+  <link href="../src/assets/JS/aos.css" rel="stylesheet">-->
 </head>
 <body>
   <app-root></app-root>
